--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "paola_frann_photography",
   "private": true,
   "dependencies": {
+    "@mapbox/mapbox-gl-geocoder": "^4.7.1",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
@@ -9,6 +10,7 @@
     "bootstrap": "4.6",
     "flatpickr": "^4.6.9",
     "jquery": "^3.6.0",
+    "mapbox-gl": "^2.3.1",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0",
     "typed.js": "^2.0.12"
